--- a/client/less/player.less
+++ b/client/less/player.less
@@ -6,6 +6,7 @@
 		padding: 0 10px;
 		width: 230px;
 		position: relative;
+		z-index: 10;
 
 		&:not(:last-child) {
 			padding-bottom: 20px;
@@ -13,15 +14,16 @@
 
 			border-bottom: 1px solid #333;
 		
-			&:before {
+			&:after {
 				position: absolute;
 				display: block;
 				content: '';
 				border-bottom: 1px solid #1f1f1f;
-				height: 100%;
 				width: 100%;
 				left: 0;
+				bottom: 0;
 				.box-sizing(border-box);
+				z-index: 1;
 			}
 			
 			//border-bottom: 1px ridge #333;
@@ -58,6 +60,8 @@
 				height: @inOutWardsDimension;
 
 				background: lighten(@bgColor, 10%);
+
+				cursor: pointer;
 			}
 		}
 	}
